# runnercoach

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  operational-intake.yml  pages.yml
data/knowledge/: science_refs.yaml
data/plan/: cycle.yaml  planned_workouts.csv  races.yaml  workout_templates.yaml
docs/: athlete-profiles.md  coaching-principles.md  decisions.md  google-sheets.md  operating-manual.md  roadmap.md  scientific-basis.md  state.md
reports/: dashboard.xlsx  latest-summary.md
scripts/: build_dashboard.py  build_frontend_data.py  build_plan.py  call_bedrock_recommendation.py  call_openai_recommendation.py  generate_recommendation.py  ingest_garmin.py  process_frontend_intake.py  run_pipeline.py  sim_cycle.py  sim_full_cycle.py  sim_goal_trajectories.py  sim_harness.py  sim_matrix.py  sim_scenarios.py
tests/: test_adaptation.py  test_checkins_and_plan.py  test_dashboard.py  test_edge_case_matrix.py  test_execution_signals.py  test_explain.py  test_feasibility.py  test_frontend_data.py  test_full_cycle_scenarios.py  test_garmin.py  test_github_actions_security.py  test_goal_trajectories.py  test_living_plan.py  test_llm.py  test_models_and_csv.py  test_operational_intake.py  test_pacing.py  test_periodization_volume.py  test_pipeline.py  test_plan_writer.py  test_progression.py  test_project_scaffold.py  test_race_intake.py  test_recommendations.py  test_science.py  test_session_selection.py  test_symptom_failclosed.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+49 files in other folders)
